================= Unreleased ==================
; Fixed ; Minor ; Compiler ; #5402
Fixed c code generation bug when sparse Jacobians are generated with nonlinear
blocks present in model.

; Fixed ; Minor ; Compiler ; #5404
Fixed missing include of the block solver in the FMI templates.

; Changed ; Minor ; Compiler, Runtime ; #5402
Generation of sparse Jacobian for linear systems is now controlled by a
threshold and either the dense Jacobian is generated or the sparse, not both. 

; Changed ; Minor ; Runtime ; #5401
Added defines to handle missing CLOCKS_PER_SEC

; Changed ; Minor ; Runtime ; #5400
Reworked how we check if a directory exist.

; Changed ; Minor ; Runtime ; #5399
Delayed check of the resource location until it is asked for.

; Fixed ; Minor ; Compiler ; #5394
Fixed compiler crash when using function with several outputs where one is 
a zero-size array.

; Changed ; Minor ; Compiler ; #5398
Removed the need to define fmu type in the make file

; Feature ; Minor ; Compiler ; #5375
Added compiler option "event_output_vars". When set, output variables are
generated for each event indicator.

; Other ; Minor ; General ; #5393
Added a changelog to JModelica.org.


==================== JM 2.0 ===================