@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5408
+Removed erreneous xml tag where several annotations were listed under the
+annotation tag in VendorAnnotatios.
+
 ; Fixed ; Minor ; Compiler ; #5402
 Fixed c code generation bug when sparse Jacobians are generated with nonlinear
 blocks present in model.
